--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
                      <div class="col-md-8">
                         <h5>Subtotal: </h5>
-                        <h5>Tax:</h5>
+                        <h5>Tax(15%):</h5>
                         <h5>Total:</h5>
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="sub-total">1278</span></h5>
+                        <h5>$<span id="tax-total">191.70</span></h5>
+                        <h5>$<span id="total-amount">1469.70</span></h5>
                      </div>
                   </div>
                </div>
